# ska-src-clients

./: .gitignore  .gitlab-ci.yml  .pylintrc  .release  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
doc/: conf.py  index.rst
doc/_build/doctrees/: environment.pickle  index.doctree  srcnet-oper.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  srcnet-oper.html
docs/: conf.py
docs/src/: conf.py  srcnet-oper.rst
etc/: srcnet-clients-config.yml  srcnet-clients.ini
etc/scripts/: increment-app-version.sh
src/ska_src_clients/api/: __init__.py  api.py  data.py  metadata.py  services.py  site.py
src/ska_src_clients/client/: client.py  data_management.py  service_api.py
src/ska_src_clients/common/: exceptions.py  utility.py
src/ska_src_clients/monitoring/: api.py
src/ska_src_clients/plan/: plan.py  step.py
src/ska_src_clients/session/: oidc.py  session.py
tests/upload/: pytest.ini
tests/upload/unit/: test_dummy.py
